
2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* call.c (cob_resolve_internal): refactored to keep call_entry_buff
	  and call_entry_buff2 as a local variables instead of dynamic
	  storage check + allocating + deallocating
	* common.h, call.c (cob_encode_program_id): extracted from
	  cob_resolve_internal and added explicit check for the buffer
	  size fixing bug #584; externalized for use by cobc
	* common.h: new define COB_MAX_LITERAL_LEN, with currently 256k,
	  used in cobc instead of previous LONG_MAX

2019-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* system.def: added CBL_ALARM_SOUND and CBL_BELL_SOUND, both as alias
	  to cob_sys_sound_bell

2019-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_oc_nanosleep): fixed by splitting get_sleep_nanoseconds
	  into an additional function get_sleep_nanoseconds_from_seconds

2019-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: split cob_check_pos_status into handle_status and
	  pass_cursor_to_program
	* screenio.c (pass_cursor_to_program): fix bug #483
	  increment line number by one, pass actual column
	* screenio.c (get_cursor_from_program, cob_screen_get_all, field_accept):
	  fix bug #579 - use CURSOR clause in SPECIAL-NAMES also for positioning
	* screenio.c: finished approach to add mouse support via COB_MOUSE_FLAGS
	* screenio.c, common.c, coblocal.h: added COB_MOUSE_INTERVAL

2019-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: extracted (get_accept_timeout) and removed the artificial
	  minimal limit FR #196

2019-06-23  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, move.c, numeric.c, reportio.c, termio.c: fixed possible
	  arithmetic overflow (especially because of cast errors on x64)

2019-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (gc_conf, set_config_val, get_config_val), coblocal.h:
	  split ENV_INT to ENV_UINT (all current options) and ENV_UINT (allowing
	  a negative min_value), actually check for numeric values
